--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "pg": "^7.4.3",
+    "react-router": "^4.3.1",
     "sequelize": "^4.38.0"
   }
 }
+
